force-app/main/default/objects/Account/fields/Birthday_Month_Day__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Month_Day__c</fullName>
    <formula>CASE(MONTH(PersonBirthdate), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;,  4, &quot;April&quot;,  5, &quot;May&quot;,  6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;None&quot;) &amp;&quot; &quot;&amp;  TEXT(DAY(PersonBirthdate))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Shows month and day of birthdate.</inlineHelpText>
    <label>Birthday Month-Day</label>
    <type>Text</type>
</CustomField>