force-app/main/default/objects/Account/fields/Current_Birthdate__c.field-meta.xml
<CustomField>
    <fullName>Current_Birthdate__c</fullName>
    <formula>IF(DATE(YEAR(TODAY()),MONTH(PersonBirthdate),DAY(PersonBirthdate)) &lt; TODAY(), DATE(YEAR(TODAY())+1,MONTH(PersonBirthdate),DAY(PersonBirthdate)), DATE(YEAR(TODAY()),MONTH(PersonBirthdate),DAY(PersonBirthdate)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Birthdate</label>
    <type>Date</type>
</CustomField>