force-app/main/default/objects/Account/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <label>Session_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>