force-app/main/default/objects/Account/listViews/All_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>